--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,6 @@
 * {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin: 16px 16px;
 }
 
 h1 {
@@ -9,5 +8,27 @@ h1 {
 }
 
 button {
+  font-size: 16px;
+  color: white;
+  background-color: rgb(0, 101, 255);
+  border: 0px;
+  border-radius: 4px;
   padding: 6px 12px;
+}
+
+button:hover {
+  background-color: rgb(0, 0, 103);
+}
+
+.form {
+  max-width: 200px;
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  padding: 8px;
+  border: 1px solid rgb(209, 208, 208);
+  border-radius: 4px;
+  margin: 0px 0px 8px 0px;
 }
